package com.token_validator_ms.dto;

public record TokenDto(String value) {
}
